--- a/module-1/lab-api-scavenger-game/your-code/Challenge-2.ipynb
+++ b/module-1/lab-api-scavenger-game/your-code/Challenge-2.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30"
+       "2"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,11 +27,20 @@
     "\n",
     "key = os.environ[\"Token\"]\n",
     "\n",
-    "repo = 'ironhack-datalabs/madrid-oct-2018'\n",
-    "commits = 'http://api.github.com/repos/ironhack-datalabs/madrid-oct-2018/commits'\n",
+    "since='2019-06-19'\n",
+    "until='2019-06-27'\n",
+    "\n",
+    "repo = 'ironhack-datalabs/datamad0619'\n",
+    "commits = 'http://api.github.com/repos/ironhack-datalabs/datamad0619/commits?since={}&until={}'.format(since, until)\n",
+    "\n",
+    "\n",
     "\n",
     "res = requests.get(commits, auth=('Pela12345', key))\n",
     "res_final = res.json()\n",
+    "\n",
+    "commit_list=[]\n",
+    "for i in res_final:\n",
+    "    commit_list.append(i.get('commit'))\n",
     "\n",
     "len(res_final)\n",
     "    \n",
