--- a/module-1/lab-api-scavenger-game/Challenge 3.ipynb
+++ b/module-1/lab-api-scavenger-game/Challenge 3.ipynb
@@ -64,10 +64,7 @@
     "        lista.append(request[i][\"name\"])\n",
     "    return lista   \n",
     "\n",
-    "print(extrdict(request))\n",
-    "\n",
-    "#https://developer.github.com/v3/git/trees/#get-a-tree-recursively\n",
-    "# Los git trees aparecen en el json y hay que seguir investigandolos"
+    "print(extrdict(request))"
    ]
   },
   {
