--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -46,15 +46,7 @@
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd\n",
-    "# from pprint import pprint\n",
-    "# from lxml import html\n",
-    "# from lxml.html import fromstring\n",
-    "# import urllib.request\n",
-    "# from urllib.request import urlopen\n",
-    "# import random\n",
-    "# import re\n",
-    "# import scrapy"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -630,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
