--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests as req\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "# from pprint import pprint\n",
@@ -52,10 +52,10 @@
     "# from lxml.html import fromstring\n",
     "# import urllib.request\n",
     "# from urllib.request import urlopen\n",
-    "# import random\n",
-    "# import re\n",
+    "import random\n",
+    "import re\n",
     "# import scrapy\n",
-    "#\n"
+    "\n"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +77,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html lang=\"en\">\n",
+      " <head>\n",
+      "  <meta charset=\"utf-8\"/>\n",
+      "  <link href=\"https://github.githubassets.com\" rel=\"dns-prefetch\"/>\n",
+      "  <link href=\"https://avatars0.githubusercontent.com\" rel=\"dns-prefetch\"/>\n",
+      "  <link href=\"https://avatars1.githubusercontent.com\" rel=\"dns-prefetch\"/>\n",
+      "  <link href=\"https://avatars2.githubusercontent.com\" rel=\"dns-prefetch\"/>\n",
+      "  <link href=\"https://avatars3.githubusercontent.com\" rel=\"dns-prefetch\"/>\n",
+      "  <link href=\"https://github-cloud.s3.amazonaws.com\" rel=\"dns-prefetch\"/>\n",
+      "  <link href=\"https://user-images.githubusercontent.com/\" rel=\"dns-prefetch\"/>\n",
+      "  <link crossorigin=\"anonymous\" href=\"https://github.githubassets.com/assets/frameworks-e7318add1f7e055d040edb0f75aaa0ba.css\" integrity=\"sha512-67V2J9Se2CifJlftk9/cExHGvxd7N9b9EdGnQEpszu99Ogeecilu9jIDxoCkx3zNLfB9ArraXW0J03qyVmN0Uw==\" media=\"all\" rel=\"stylesheet\">\n",
+      "   <link crossorigin=\"anonymous\" href=\"https://github.githubassets.com/assets/site-294181adec18ed639e160b96b45d17ac.css\" integrity=\"sha512-MRlTIqIyb\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "res = req.get(url)\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "print(soup.prettify()[:1000])"
    ]
   },
   {
@@ -135,11 +157,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Peter Bourgon (peterbourgon)',\n",
+       " 'Pierre Krieger (tomaka)',\n",
+       " 'Carl Lerche (carllerche)',\n",
+       " 'Matt Layher (mdlayher)',\n",
+       " 'Claudio Sanches (claudiosanches)',\n",
+       " 'Jeremy Long (jeremylong)',\n",
+       " 'Eddy Verbruggen (EddyVerbruggen)',\n",
+       " 'Kyle (kylekatarnls)',\n",
+       " 'Jeff Geerling (geerlingguy)',\n",
+       " 'Kirk Wight (kwight)',\n",
+       " 'Daniel Shiffman (shiffman)',\n",
+       " '子骅 (luin)',\n",
+       " 'Bastian Köcher (bkchr)',\n",
+       " 'Brendan Forster (shiftkey)',\n",
+       " 'Benjamin Eberlei (beberlei)',\n",
+       " 'Tim Griesser (tgriesser)',\n",
+       " 'Sascha Grunert (saschagrunert)',\n",
+       " 'Juliette (jrfnl)',\n",
+       " 'Carlos Alexandro Becker (caarlos0)',\n",
+       " 'John Blackbourn (johnbillion)',\n",
+       " 'Harry Wolff (hswolff)',\n",
+       " 'Yoni Goldberg (i0natan)',\n",
+       " 'Felix Angelov (felangel)',\n",
+       " 'Rob Moran (thegecko)',\n",
+       " 'Ayrat Badykov (ayrat555)']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#your code"
+    "users = []\n",
+    "\n",
+    "for s in soup.select('h1[class=\"h3 lh-condensed\"] a'):\n",
+    "    users.append(str(s.get_text())+\" \"+\"(\"+str(s.get(\"href\")).lstrip(\"/\")+\")\")\n",
+    "\n",
+    "    \n",
+    "display(users)\n"
    ]
   },
   {
@@ -153,21 +215,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/python?since=daily'"
+    "url1 = 'https://github.com/trending/python?since=daily'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bokeh',\n",
+       " 'documentation',\n",
+       " 'celery',\n",
+       " 'nl2sql_baseline',\n",
+       " 'airflow',\n",
+       " 'dbt',\n",
+       " 'tweepy',\n",
+       " 'Detectron',\n",
+       " 'mlflow',\n",
+       " 'USTC-Course',\n",
+       " 'tensor2tensor',\n",
+       " 'tvm',\n",
+       " 'openshift-ansible',\n",
+       " 'python-telegram-bot',\n",
+       " 'py-faster-rcnn',\n",
+       " 'nni',\n",
+       " 'locust',\n",
+       " 'google-cloud-python',\n",
+       " 'sanic',\n",
+       " 'edx-platform',\n",
+       " 'Mobile-Security-Framework-MobSF',\n",
+       " 'django-elasticsearch-dsl',\n",
+       " 'jsonschema',\n",
+       " 'scrapy',\n",
+       " 'sigma']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#your code"
+    "res1 = req.get(url1)\n",
+    "soup1 = BeautifulSoup(res1.text, 'html.parser')\n",
+    "repos = []\n",
+    "\n",
+    "for s in soup1.select('h1[class=\"h3 lh-condensed\"] a'):\n",
+    "    repos.append(s.get(\"href\").split(\"/\")[2])\n",
+    "\n",
+    "display(repos)\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -179,21 +284,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'"
+    "url2 = 'https://en.wikipedia.org/wiki/Walt_Disney'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://en.wikipedia.org/wiki/File:Walt_Disney_1946.JPG',\n",
+       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_1942_signature.svg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_envelope_ca._1921.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Trolley_Troubles_poster.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Steamboat-willie.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_1935.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_Snow_white_1937_trailer_screenshot_(13).jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Disney_drawing_goofy.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:DisneySchiphol1951.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:WaltDisneyplansDisneylandDec1954.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Walt_disney_portrait_right.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_Grave.JPG',\n",
+       " 'https://en.wikipedia.org/wiki/File:Roy_O._Disney_with_Company_at_Press_Conference.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Disney_Display_Case.JPG',\n",
+       " 'https://en.wikipedia.org/wiki/File:Disney1968.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Animation_disc.svg',\n",
+       " 'https://en.wikipedia.org/wiki/File:P_vip.svg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Magic_Kingdom_castle.jpg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Video-x-generic.svg',\n",
+       " 'https://en.wikipedia.org/wiki/File:Flag_of_Los_Angeles_County,_California.svg',\n",
+       " 'https://en.wikipedia.org/wiki/File:USA_flag_on_television.svg']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#your code"
+    "res2 = req.get(url2)\n",
+    "soup2 = BeautifulSoup(res2.text, 'html.parser')\n",
+    "image_links=[]\n",
+    "\n",
+    "for s in soup2.select('a.image'):\n",
+    "    image_links.append(\"https://en.wikipedia.org\"+s.get(\"href\"))\n",
+    "\n",
+    "display(image_links)"
    ]
   },
   {
