--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -164,13 +164,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,10 +184,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res = req.get(url)\n",
+    "res.text\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all('h1',{\"svg\": \"svg\"})\n",
+    "\n",
+    "<a href=\"/peterbourgon/diskv\" class=\"css-truncate css-truncate-target\" style=\"max-width: 175px;\" data-ga-click=\"Explore, go to repository, location:trending developers\">\n",
+    "        <svg class=\"octicon octicon-repo text-gray mr-1\" viewBox=\"0 0 12 16\" version=\"1.1\" width=\"12\" height=\"16\" aria-hidden=\"true\"><path fill-rule=\"evenodd\" d=\"M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z\"></path></svg>\n",
+    "\n",
+    "      diskv\n",
+    "    </a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "repos_names = [repo.text for repo in repos]\n",
+    "print(repos_names)"
+   ]
   },
   {
    "cell_type": "markdown",
