--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -294,34 +294,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://en.wikipedia.org/wiki/File:Walt_Disney_1946.JPG',\n",
-       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_1942_signature.svg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_envelope_ca._1921.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Trolley_Troubles_poster.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Steamboat-willie.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_1935.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_Snow_white_1937_trailer_screenshot_(13).jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Disney_drawing_goofy.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:DisneySchiphol1951.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:WaltDisneyplansDisneylandDec1954.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Walt_disney_portrait_right.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Walt_Disney_Grave.JPG',\n",
-       " 'https://en.wikipedia.org/wiki/File:Roy_O._Disney_with_Company_at_Press_Conference.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Disney_Display_Case.JPG',\n",
-       " 'https://en.wikipedia.org/wiki/File:Disney1968.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Animation_disc.svg',\n",
-       " 'https://en.wikipedia.org/wiki/File:P_vip.svg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Magic_Kingdom_castle.jpg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Video-x-generic.svg',\n",
-       " 'https://en.wikipedia.org/wiki/File:Flag_of_Los_Angeles_County,_California.svg',\n",
-       " 'https://en.wikipedia.org/wiki/File:USA_flag_on_television.svg']"
+       "['https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Walt_Disney_1946.JPG/220px-Walt_Disney_1946.JPG',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Walt_Disney_1942_signature.svg/150px-Walt_Disney_1942_signature.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Walt_Disney_envelope_ca._1921.jpg/220px-Walt_Disney_envelope_ca._1921.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Trolley_Troubles_poster.jpg/170px-Trolley_Troubles_poster.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg/170px-Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/en/thumb/4/4e/Steamboat-willie.jpg/170px-Steamboat-willie.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Walt_Disney_1935.jpg/170px-Walt_Disney_1935.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg/220px-Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Disney_drawing_goofy.jpg/170px-Disney_drawing_goofy.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/DisneySchiphol1951.jpg/220px-DisneySchiphol1951.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/WaltDisneyplansDisneylandDec1954.jpg/220px-WaltDisneyplansDisneylandDec1954.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Walt_disney_portrait_right.jpg/170px-Walt_disney_portrait_right.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Walt_Disney_Grave.JPG/170px-Walt_Disney_Grave.JPG',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Roy_O._Disney_with_Company_at_Press_Conference.jpg/170px-Roy_O._Disney_with_Company_at_Press_Conference.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Disney_Display_Case.JPG/170px-Disney_Display_Case.JPG',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Disney1968.jpg/170px-Disney1968.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Animation_disc.svg/30px-Animation_disc.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/en/thumb/6/69/P_vip.svg/29px-P_vip.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Magic_Kingdom_castle.jpg/24px-Magic_Kingdom_castle.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/en/thumb/e/e7/Video-x-generic.svg/30px-Video-x-generic.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Flag_of_Los_Angeles_County%2C_California.svg/30px-Flag_of_Los_Angeles_County%2C_California.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/USA_flag_on_television.svg/30px-USA_flag_on_television.svg.png']"
       ]
      },
      "metadata": {},
@@ -333,8 +333,8 @@
     "soup2 = BeautifulSoup(res2.text, 'html.parser')\n",
     "image_links=[]\n",
     "\n",
-    "for s in soup2.select('a.image'):\n",
-    "    image_links.append(\"https://en.wikipedia.org\"+s.get(\"href\"))\n",
+    "for s in soup2.select('a.image img'):\n",
+    "    image_links.append(\"https:\"+s.get(\"src\"))\n",
     "\n",
     "display(image_links)"
    ]
@@ -348,21 +348,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://en.wikipedia.org/wiki/Python' "
+    "url3 ='https://en.wikipedia.org/wiki/Python' "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://en.wikipedia.org/wiki/Pythonidae',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(genus)',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(mythology)',\n",
+       " 'https://en.wikipedia.org/wiki/Python_of_Aenus',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(painter)',\n",
+       " 'https://en.wikipedia.org/wiki/Python_of_Byzantium',\n",
+       " 'https://en.wikipedia.org/wiki/Python_of_Catana',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(film)',\n",
+       " 'https://en.wikipedia.org/wiki/Pythons_2',\n",
+       " 'https://en.wikipedia.org/wiki/Monty_Python',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(Monty)_Pictures',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(programming_language)',\n",
+       " 'https://en.wikipedia.org/wiki/CPython',\n",
+       " 'https://en.wikipedia.org/wiki/CMU_Common_Lisp',\n",
+       " 'https://en.wikipedia.org/wiki/PERQ#PERQ_3',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(Busch_Gardens_Tampa_Bay)',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(Coney_Island,_Cincinnati,_Ohio)',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(Efteling)',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(automobile_maker)',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(Ford_prototype)',\n",
+       " 'https://en.wikipedia.org/wiki/Colt_Python',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(missile)',\n",
+       " 'https://en.wikipedia.org/wiki/Python_(nuclear_primary)',\n",
+       " 'https://en.wikipedia.org/wiki/Python_Anghelo',\n",
+       " 'https://en.wikipedia.org/wiki/PYTHON',\n",
+       " 'https://en.wikipedia.org/wiki/Cython',\n",
+       " 'https://en.wikipedia.org/wiki/Pyton']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#your code"
+    "res3 = req.get(url3)\n",
+    "soup3 = BeautifulSoup(res3.text, 'html.parser')\n",
+    "py_links=[]\n",
+    "\n",
+    "for s in soup3.select('div.mw-parser-output ul li a[href^=\"/\"]'):\n",
+    "    py_links.append(\"https://en.wikipedia.org\"+s.get(\"href\"))\n",
+    "\n",
+    "display(py_links)\n"
    ]
   },
   {
@@ -374,21 +417,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'http://uscode.house.gov/download/download.shtml'"
+    "url4 = 'http://uscode.house.gov/download/download.shtml'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Title 2 - The Congress']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#your code"
+    "res4 = req.get(url4)\n",
+    "soup4 = BeautifulSoup(res4.text, 'html.parser')\n",
+    "\n",
+    "changed_titles=[]\n",
+    "for s in soup4.select('div.usctitlechanged'):\n",
+    "    changed_titles.append(s.get_text().replace('\\n','').strip())\n",
+    "\n",
+    "display(changed_titles)"
    ]
   },
   {
@@ -400,21 +460,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://www.fbi.gov/wanted/topten'"
+    "url5 = 'https://www.fbi.gov/wanted/topten'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['JASON DEREK BROWN',\n",
+       " 'RAFAEL CARO-QUINTERO',\n",
+       " 'ALEXIS FLORES',\n",
+       " 'EUGENE PALMER',\n",
+       " 'SANTIAGO VILLALBA MEDEROS',\n",
+       " 'ROBERT WILLIAM FISHER',\n",
+       " 'BHADRESHKUMAR CHETANBHAI PATEL',\n",
+       " 'ARNOLDO JIMENEZ',\n",
+       " 'ALEJANDRO ROSALES CASTILLO',\n",
+       " 'YASER ABDEL SAID']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#your code "
+    "res5 = req.get(url5)\n",
+    "soup5 = BeautifulSoup(res5.text, 'html.parser')\n",
+    "\n",
+    "fbi_names=[]\n",
+    "for s in soup5.select('h3.title a'):\n",
+    "    fbi_names.append(s.get_text())\n",
+    "\n",
+    "display(fbi_names)"
    ]
   },
   {
@@ -426,12 +512,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://www.emsc-csem.org/Earthquake/'"
+    "url6 = 'https://www.emsc-csem.org/Earthquake/'"
    ]
   },
   {
@@ -440,7 +526,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "res6 = req.get(url6)\n",
+    "soup6 = BeautifulSoup(res6.text, 'html.parser')\n",
+    "\n",
+    "earthq=pd.DataFrame()\n",
+    "earth[\"Date\"]=[\n",
+    "    s.get_text() for s in soup6.select('tr td.tabev6  ')\n",
+    "]"
    ]
   },
   {
