Avanzando con el lab

--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests as req\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "# from pprint import pprint\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,11 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "res = req.get(url)\n",
+    "#res.text\n"
    ]
   },
   {
@@ -134,11 +136,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Peter Bourgon (peterbourgon)',\n",
+       " 'Pierre Krieger (tomaka)',\n",
+       " 'Carl Lerche (carllerche)',\n",
+       " 'Matt Layher (mdlayher)',\n",
+       " 'Claudio Sanches (claudiosanches)',\n",
+       " 'Jeremy Long (jeremylong)',\n",
+       " 'Eddy Verbruggen (EddyVerbruggen)',\n",
+       " 'Kyle (kylekatarnls)',\n",
+       " 'Jeff Geerling (geerlingguy)',\n",
+       " 'Kirk Wight (kwight)',\n",
+       " 'Daniel Shiffman (shiffman)',\n",
+       " '子骅 (luin)',\n",
+       " 'Bastian Köcher (bkchr)',\n",
+       " 'Brendan Forster (shiftkey)',\n",
+       " 'Benjamin Eberlei (beberlei)',\n",
+       " 'Tim Griesser (tgriesser)',\n",
+       " 'Sascha Grunert (saschagrunert)',\n",
+       " 'Juliette (jrfnl)',\n",
+       " 'Carlos Alexandro Becker (caarlos0)',\n",
+       " 'John Blackbourn (johnbillion)',\n",
+       " 'Harry Wolff (hswolff)',\n",
+       " 'Yoni Goldberg (i0natan)',\n",
+       " 'Felix Angelov (felangel)',\n",
+       " 'Rob Moran (thegecko)',\n",
+       " 'Ayrat Badykov (ayrat555)']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "#your code\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "lst=[]\n",
+    "for i in soup.select('h1.h3 a'):\n",
+    "    lst.append((i.get_text()+ ' ('+ i.get('href').replace('/','')+')'))\n",
+    "lst"
    ]
   },
   {
@@ -152,21 +194,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/python?since=daily'"
+    "url2 = 'https://github.com/trending/python?since=daily'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "res2 = req.get(url2)\n",
+    "#res2.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bokeh',\n",
+       " 'raspberrypi',\n",
+       " 'celery',\n",
+       " 'ZhuiyiTechnology',\n",
+       " 'apache',\n",
+       " 'fishtown-analytics',\n",
+       " 'tweepy',\n",
+       " 'facebookresearch',\n",
+       " 'mlflow',\n",
+       " 'USTC-Resource',\n",
+       " 'tensorflow',\n",
+       " 'dmlc',\n",
+       " 'openshift',\n",
+       " 'python-telegram-bot',\n",
+       " 'rbgirshick',\n",
+       " 'microsoft',\n",
+       " 'locustio',\n",
+       " 'googleapis',\n",
+       " 'huge-success',\n",
+       " 'edx',\n",
+       " 'MobSF',\n",
+       " 'sabricot',\n",
+       " 'Julian',\n",
+       " 'scrapy',\n",
+       " 'Neo23x0']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst2=[]\n",
+    "soup = BeautifulSoup(res2.text, 'html.parser')\n",
+    "for i in soup.select('h1.h3 a'):\n",
+    "    lst2.append((i.get('href').split('/')[1]))\n",
+    "lst2"
    ]
   },
   {
@@ -178,21 +270,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'"
+    "url3 = 'https://en.wikipedia.org/wiki/Walt_Disney'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "res3 = req.get(url3)\n",
+    "#res3.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Walt_Disney_1946.JPG/220px-Walt_Disney_1946.JPG',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Walt_Disney_1942_signature.svg/150px-Walt_Disney_1942_signature.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Walt_Disney_envelope_ca._1921.jpg/220px-Walt_Disney_envelope_ca._1921.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Trolley_Troubles_poster.jpg/170px-Trolley_Troubles_poster.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg/170px-Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/en/thumb/4/4e/Steamboat-willie.jpg/170px-Steamboat-willie.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Walt_Disney_1935.jpg/170px-Walt_Disney_1935.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg/220px-Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Disney_drawing_goofy.jpg/170px-Disney_drawing_goofy.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/DisneySchiphol1951.jpg/220px-DisneySchiphol1951.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/WaltDisneyplansDisneylandDec1954.jpg/220px-WaltDisneyplansDisneylandDec1954.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Walt_disney_portrait_right.jpg/170px-Walt_disney_portrait_right.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Walt_Disney_Grave.JPG/170px-Walt_Disney_Grave.JPG',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Roy_O._Disney_with_Company_at_Press_Conference.jpg/170px-Roy_O._Disney_with_Company_at_Press_Conference.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Disney_Display_Case.JPG/170px-Disney_Display_Case.JPG',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Disney1968.jpg/170px-Disney1968.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Animation_disc.svg/30px-Animation_disc.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/en/thumb/6/69/P_vip.svg/29px-P_vip.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Magic_Kingdom_castle.jpg/24px-Magic_Kingdom_castle.jpg',\n",
+       " 'https://upload.wikimedia.org/wikipedia/en/thumb/e/e7/Video-x-generic.svg/30px-Video-x-generic.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Flag_of_Los_Angeles_County%2C_California.svg/30px-Flag_of_Los_Angeles_County%2C_California.svg.png',\n",
+       " 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/USA_flag_on_television.svg/30px-USA_flag_on_television.svg.png']"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst3=[]\n",
+    "soup = BeautifulSoup(res3.text, 'html.parser')\n",
+    "for i in soup.select('a.image img'):\n",
+    "    lst3.append('https:'+i.get('src'))\n",
+    "lst3"
    ]
   },
   {
@@ -204,12 +343,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://en.wikipedia.org/wiki/Python' "
+    "url4 ='https://en.wikipedia.org/wiki/Python' "
    ]
   },
   {
@@ -218,7 +357,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "res4 = req.get(url4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/wiki/Pythonidae',\n",
+       " '/wiki/Python_(genus)',\n",
+       " '/wiki/Python_(mythology)',\n",
+       " '/wiki/Python_of_Aenus',\n",
+       " '/wiki/Python_(painter)',\n",
+       " '/wiki/Python_of_Byzantium',\n",
+       " '/wiki/Python_of_Catana',\n",
+       " '/wiki/Python_(film)',\n",
+       " '/wiki/Pythons_2',\n",
+       " '/wiki/Monty_Python',\n",
+       " '/wiki/Python_(Monty)_Pictures',\n",
+       " '/wiki/Python_(programming_language)',\n",
+       " '/wiki/CPython',\n",
+       " '/wiki/CMU_Common_Lisp',\n",
+       " '/wiki/PERQ#PERQ_3',\n",
+       " '/wiki/Python_(Busch_Gardens_Tampa_Bay)',\n",
+       " '/wiki/Python_(Coney_Island,_Cincinnati,_Ohio)',\n",
+       " '/wiki/Python_(Efteling)',\n",
+       " '/wiki/Python_(automobile_maker)',\n",
+       " '/wiki/Python_(Ford_prototype)',\n",
+       " '/wiki/Colt_Python',\n",
+       " '/wiki/Python_(missile)',\n",
+       " '/wiki/Python_(nuclear_primary)',\n",
+       " '/wiki/Python_Anghelo',\n",
+       " '/wiki/PYTHON',\n",
+       " '/wiki/Cython',\n",
+       " '/wiki/Pyton']"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst4=[]\n",
+    "soup = BeautifulSoup(res4.text, 'html.parser')\n",
+    "for i in soup.select('div.mw-parser-output ul a[href^=\"/\"]'):\n",
+    "    lst4.append(i.get('href'))\n",
+    "lst4\n"
    ]
   },
   {
@@ -230,21 +420,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'http://uscode.house.gov/download/download.shtml'"
+    "url5 = 'http://uscode.house.gov/download/download.shtml'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "res5 = req.get(url5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Title 2 - The Congress']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst5=[]\n",
+    "soup = BeautifulSoup(res5.text, 'html.parser')\n",
+    "for i in soup.select('div.usctitlechanged'):\n",
+    "    lst5.append(i.get_text().strip())\n",
+    "lst5\n"
    ]
   },
   {
@@ -256,12 +471,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://www.fbi.gov/wanted/topten'"
+    "url6 = 'https://www.fbi.gov/wanted/topten'"
    ]
   },
   {
@@ -270,7 +485,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code "
+    "#your code \n",
+    "res6 = req.get(url6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['JASON DEREK BROWN',\n",
+       " 'RAFAEL CARO-QUINTERO',\n",
+       " 'ALEXIS FLORES',\n",
+       " 'EUGENE PALMER',\n",
+       " 'SANTIAGO VILLALBA MEDEROS',\n",
+       " 'ROBERT WILLIAM FISHER',\n",
+       " 'BHADRESHKUMAR CHETANBHAI PATEL',\n",
+       " 'ARNOLDO JIMENEZ',\n",
+       " 'ALEJANDRO ROSALES CASTILLO',\n",
+       " 'YASER ABDEL SAID']"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst6=[]\n",
+    "soup = BeautifulSoup(res6.text, 'html.parser')\n",
+    "for i in soup.select('h3.title a'):\n",
+    "    lst6.append(i.get_text())\n",
+    "lst6\n"
    ]
   },
   {
@@ -282,12 +531,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://www.emsc-csem.org/Earthquake/'"
+    "url7 = 'https://www.emsc-csem.org/Earthquake/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#your code\n",
+    "res7 = req.get(url7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27', '2019-06-27']\n",
+      "['16:31:44.2', '16:14:09.0', '16:12:09.0', '15:51:31.8', '15:51:20.1', '15:44:25.0', '15:39:30.5', '15:22:10.6', '14:49:19.0', '14:43:00.6', '14:14:03.4', '14:05:16.0', '13:36:30.0', '12:48:35.9', '12:47:27.4', '12:45:41.0', '12:36:35.0', '11:57:30.0', '11:45:34.0', '11:34:15.8']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst7=[]\n",
+    "soup = BeautifulSoup(res7.text, 'html.parser')\n",
+    "for i in soup.select('td b a')[:20]:\n",
+    "    lst7.append(i.get_text())\n",
+    "lst7 = list(map(lambda x: x.split('\\xa0\\xa0\\xa0'),lst7))\n",
+    "date=[]\n",
+    "hour=[]\n",
+    "for i in lst7:\n",
+    "    date.append(i[0])\n",
+    "    hour.append(i[1])\n",
+    "\n",
+    "print(date)\n",
+    "print(hour)"
    ]
   },
   {
@@ -295,9 +584,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#your code"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -630,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
